<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    app:strokeColor="@color/colorSecondaryLight"
    app:strokeWidth="1dp"
    android:layout_marginTop="2dp">

    <LinearLayout
        android:id="@+id/linearLayoutTitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/nombre_row_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/nombrePlatillo"
            android:textColor="@color/textoColorNormal" />

        <TextView
            android:id="@+id/cantidad_row_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/cantidadPlatillo"
            android:textColor="@color/textoColorNormal" />

        <TextView
            android:id="@+id/precio_row_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/precioPlatillo"
            android:textColor="@color/textoColorNormal" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>